parser/tests/bad/arr02-3.st
% lower bound of an 'array' must have type 'int'
%   dynamic formal

procedure p(arr: array 1.0..* of int)
  % empty
end procedure
